# libqi-python

./: .gitignore  .gitlab-ci.yml  .travis.yml  CMakeLists.txt  COPYING  MANIFEST.in  Pipfile  README.rst  conanfile.py  create_wheel.py  pyproject.toml  pytest.ini  qiproject.xml  setup.py
.github/workflows/: python-package.yml
ci/: cibuildwheel_before_all.sh  cibuildwheel_linux_before_all.sh  install_boost.sh
ci/conan/: global.conf
ci/conan/profiles/: cppstd17  default
cmake/: ParsePythonVersion.cmake  add_targets.cmake  add_tests.cmake  install_runtime_dependencies.cmake  native.py.in  set_dependencies.cmake  set_globals.cmake  set_install_rules.cmake  set_install_rules_standalone.cmake  set_install_rules_system.cmake  set_libqi_dependency.cmake  set_libqi_dependency_standalone.cmake  set_libqi_dependency_system.cmake  utils.cmake
examples/: applicationsession.py  authentication_with_application.py  qinm.py  tts-auth.py
libqi-python/: LICENSE.txt  ListFiles.json  README.md  create_wheel.py  upload_wheel.py
libqi-python/qi/: __init__.py  _binder.py  _type.py  translator.py
py2py3/: CMakeLists.txt
qi/: __init__.py  _binder.py  _type.py  _version.py.in  logging.py  native.py.in  path.py  translator.py
qi/test/: CMakeLists.txt  conftest.py  test_applicationsession.py  test_async.py  test_call.py  test_log.py  test_module.py  test_promise.py  test_property.py  test_python_typepassing.cpp  test_registerfactory.py  test_return_empty_object.py  test_session.py  test_signal.py  test_strand.py  test_typespassing.py
qipython/: common.hpp  common.hxx  error.hpp  pyapplication.hpp  pyasync.hpp  pyclock.hpp  pyexport.hpp  pyfuture.hpp  pyguard.hpp  pyinit.hpp  pylog.hpp  pymodule.hpp  pyobject.hpp  pypath.hpp  pyproperty.hpp  pysession.hpp  pysignal.hpp  pystrand.hpp  pythreadsafeobject.hpp  pytranslator.hpp  pytypes.hpp
src/: error.cpp  module.cpp  pyapplication.cpp  pyasync.cpp  pyclock.cpp  pyexport.cpp  pyfuture.cpp  pyinit.cpp  pylog.cpp  pymodule.cpp  pyobject.cpp  pyobject_p.hpp  pyobjectconverter.cpp  pypath.cpp  pyproperty.cpp  pysession.cpp  pysignal.cpp  pystrand.cpp  pystrand.hpp  pytranslator.cpp  pytypes.cpp  qimodule_python_plugin.cpp  trace.cpp
tests/: CMakeLists.txt  api.hpp  common.hpp  moduletest.cpp  service_object_holder.cpp  test_guard.cpp  test_module.cpp  test_object.cpp  test_property.cpp  test_qipython.cpp  test_qipython_local_interpreter.cpp  test_signal.cpp  test_types.cpp
testspy/: CMakeLists.txt  test_module.cpp  test_python_typepassing.cpp  test_qipython.cpp  test_signal.cpp
